# Digital_Control

DCSP_Tutorial/: CMakeLists.txt  main.c
DCSP_Tutorial/LAB/static_motor/: controller_validation.c  dead_zone_calculate.c  potential_meter_value_read.c  sin_wave_cmd.c  static_motor_gimbal_linearized_validation.c  static_motor_gimbal_modeling.c  static_motor_linearization.c  static_motor_modeling.c
DCSP_Tutorial/LAB/static_motor/controller_valid_data/: -40.0_data.out  -50.0_data.out  -60.0_data.out  0.0_data.out  40.0_data.out  50.0_data.out  60.0_data.out
DCSP_Tutorial/LAB/static_motor/dead_zone/: 1.000_data.out  4.500_data.out
DCSP_Tutorial/LAB/static_motor/potential_meter_value_data/: -60.out
DCSP_Tutorial/LAB/static_motor/static_final/: 0.000_data.out  0.025_data.out  0.125_data.out  0.175_data.out  0.200_data.out  0.225_data.out  0.250_data.out  0.300_data.out  0.375_data.out  0.400_data.out  0.475_data.out  0.550_data.out  0.750_data.out  0.775_data.out  0.875_data.out  0.950_data.out  0.975_data.out  1.025_data.out  1.050_data.out  1.200_data.out  1.225_data.out  1.250_data.out  1.350_data.out  1.375_data.out  1.400_data.out  1.425_data.out  1.525_data.out  1.600_data.out  1.625_data.out  1.725_data.out  1.800_data.out  1.875_data.out  1.925_data.out  2.050_data.out  2.100_data.out  2.175_data.out  2.250_data.out  2.325_data.out  2.350_data.out  2.375_data.out  (+58 more)
DCSP_Tutorial/LAB/static_motor/static_gimbal_data/: 0.000_data.out  0.025_data.out  0.050_data.out  0.075_data.out  0.100_data.out  0.125_data.out  0.150_data.out  0.175_data.out  0.200_data.out  0.225_data.out  0.250_data.out  0.275_data.out  0.300_data.out  0.325_data.out  0.350_data.out  0.375_data.out  0.400_data.out  0.425_data.out  0.450_data.out  0.475_data.out  0.500_data.out  0.525_data.out  0.550_data.out  0.575_data.out  0.600_data.out  0.625_data.out  0.650_data.out  0.675_data.out  0.700_data.out  0.725_data.out  0.750_data.out  0.775_data.out  0.800_data.out  0.825_data.out  0.850_data.out  0.875_data.out  0.900_data.out  0.925_data.out  0.950_data.out  0.975_data.out  (+160 more)
DCSP_Tutorial/LAB/static_motor/static_gimbal_valid_data/: 0.000_data.out  0.050_data.out  0.100_data.out  0.150_data.out  0.200_data.out  0.250_data.out  0.300_data.out  0.350_data.out  0.400_data.out  0.450_data.out  0.500_data.out  0.550_data.out  0.600_data.out  0.650_data.out  0.700_data.out  0.750_data.out  0.800_data.out  0.850_data.out  0.900_data.out  0.950_data.out  1.000_data.out  1.050_data.out  1.100_data.out  1.150_data.out  1.200_data.out  1.250_data.out  1.300_data.out  1.350_data.out  1.400_data.out  1.450_data.out  1.500_data.out  1.550_data.out  1.600_data.out  1.650_data.out  1.700_data.out  1.750_data.out  1.800_data.out  1.850_data.out  1.900_data.out  1.950_data.out  (+62 more)
DCSP_Tutorial/LAB/static_motor/static_gimbal_valid_data_final/: 0.000_data.out  0.050_data.out  0.100_data.out  0.150_data.out  0.200_data.out  0.250_data.out  0.300_data.out  0.350_data.out  0.400_data.out  0.450_data.out  0.500_data.out  0.550_data.out  0.600_data.out  0.650_data.out  0.700_data.out  0.750_data.out  0.800_data.out  0.850_data.out  0.900_data.out  0.950_data.out  1.000_data.out  1.050_data.out  1.100_data.out  1.150_data.out  1.200_data.out  1.250_data.out  1.300_data.out  1.350_data.out  1.400_data.out  1.450_data.out  1.500_data.out  1.550_data.out  1.600_data.out  1.650_data.out  1.700_data.out  1.750_data.out  1.800_data.out  1.850_data.out  1.900_data.out  1.950_data.out  (+62 more)
DCSP_Tutorial/LAB/static_motor/static_motor_data/: 0.050_data.out  0.075_data.out  0.100_data.out  0.150_data.out  0.275_data.out  0.325_data.out  0.350_data.out  0.425_data.out  0.450_data.out  0.500_data.out  0.525_data.out  0.575_data.out  0.600_data.out  0.625_data.out  0.650_data.out  0.675_data.out  0.700_data.out  0.725_data.out  0.800_data.out  0.825_data.out  0.850_data.out  0.900_data.out  0.925_data.out  1.000_data.out  1.075_data.out  1.100_data.out  1.125_data.out  1.150_data.out  1.175_data.out  1.275_data.out  1.300_data.out  1.325_data.out  1.450_data.out  1.475_data.out  1.500_data.out  1.550_data.out  1.575_data.out  1.650_data.out  1.675_data.out  1.700_data.out  (+62 more)
DCSP_Tutorial/LAB/static_motor/static_motor_data_final/: 0.000_data.out  0.025_data.out  0.050_data.out  (+197 more)
DCSP_Tutorial/include/: DAQ_include.h
DCSP_Tutorial/src/: DAQ_include.c
DCSP_Tutorial/tutorial/: DCSP_tutorial.c  DCSP_tutorial_multiinput.c  DSCP_aliasing.c  example2.c
(+222 files in other folders)
